# CQF_Backtesting

./: ,gitignore  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  workflow.yml
cqfbt/: LICENSE.md  README.md  gp3.py  runner.py
cqfbt/cqfbt/: __init__.py  backtester.py  strategy.py
cqfbt/data/: AAPL_hist.csv  AMD_hist.csv  AMZN_hist.csv  JPM_hist.csv  SPY_hist.csv  TSLA_hist.csv  market_benchmark_internal_hist.csv
src/: runner.py
src/cqfbt/: backtester.py  strategy.py
