[metadata]
name = CQF-Backtesting
version = 0.1.0
author = CQF Software Engineering Team
author_email = cornellquantfund@gmail.com
description = Cornell Quant Fund proprietary backtesting engine and tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cornellquantfund.org/
project_urls =
    Docs = https://cornellquantfund.org/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cqfbt
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cqfbt